--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "express-rate-limit": "^6.4.0",
+    "express-validation": "^4.1.0",
     "fs": "^0.0.1-security",
+    "helmet": "^5.0.2",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
+    "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.3.0"
   }
